		CHANGES IN R VERSION 0.63.1

NEW FEATURES

    o   xy.coords(.) has a  "recycle = FALSE" argument,  used in text().


BUG FIXES

    o	build-help --dosnames should now also work for text help,
	latex and examples.

    o	seq() should work better now (fuzz-factor 1e-7 inserted)

    o	multiple arguments to return caused value to be a pairlist

    o	data.frame choked on long names from deparse()

    o	data.edit now works (dataedit doesn't need pairlist()s anymore)

    o	as.pairlist(NULL) is ok

    o	ts(1:5, start=2, end=4) now work.  Further plot(ts(..), ts(..))

    o	eigen() returns $vectors in any case [S compat].

    o	apply(cbind(1,1:9, 2, quantile) doesn't drop quantile names anymore

    o	array(1, dim=(1:3)[c(F,F,F)]) is now valid == array(1,NULL) == c(1);
	the same for array(a,d, list())

    o	fix problem with step() and offsets

    o	drop attributes on matrix subsetting


		CHANGES IN R VERSION 0.63

NEW FEATURES

    o	library(... , warn.conflicts = TRUE)
	now prints all conflicts arising from attaching the given package.

    o	new  .Platform	variable  for better modularizing
	platform dependence. __This_is_"beta"_and_bound_to_be_changed___

    o	new arguments to colnames(..) and 
	rownames(x, do.NULL = TRUE, prefix = "row").
			   _
    o	par(bty = "]") for _| box(.) in plots.

    o	New standard package `modreg' (smoothing and local MODern
	REGression methods) contributed by B. D. Ripley.

    o	par() has a `no.readonly = FALSE' argument which allows more
	sensible  op <- par(no.readonly = TRUE);  on.exit(par(op)).

    o	Real Bessel functions of 1st to 3rd kind, of arbitrary order:
	besselI(), besselK(), besselJ(), besselY() are the I(), K(),
	J(), and Y() Bessel functions.

    o	New conflicts() function from B.D.Ripley

    o	uniroot has a new `maxiter' argument and returns #{iter} and
	precision.

    o	New option `show.coef.Pvalue' (default: TRUE).	If FALSE,
	print.summary.[g]lm does not print P values.
